# mentis

./: .env.example  .gitignore  README.md  __init__.py  log_analyzer.py  pyproject.toml  requirements.txt  research_report_impact_of_remote_work_on_employee_productivity_and_well-being_20250326_230649.md  research_report_impact_of_remote_work_on_employee_productivity_and_well-being_20250326_233849.md
api/: server.py  utils.py
api/agent/: graph.py  loader.py
core/agents/: __init__.py  coder_agent.py  data_analyst_agent.py  designer_agent.py  react_agent.py  reporter_agent.py  research_agent.py  supervisor.py  supervisor_agent.py
core/tools/: __init__.py  e2b_tool.py  (+4 more)
examples/: 01_supervisor_test.py  02_supervisor_agent_test.py  03_tavily_tools_test.py  04_react_agent_output.md  04_react_agent_test.py  05_react_agent_user_input.py  06_web_extraction_tools_test.py  07_web_extraction_with_filesystem.py  08_react_agent_tool_registry_test.py  09_e2b_code_interpreter_test.py  10_financial_data_analysis.py  11_e2b_sandbox_test.py  12_planning_supervisor_test.py  13_multi_agent_roles_test.py  13_mutli_agent_roles_test_logs.md  1_supervisor_test_01.py  TODO_computer_tool_demo.py
instructions/: 00.Langgraph 和 React Agent.md  01.supervisor_pattern.md  01.supervisor_pattern_updated.md  02.supervisor_pattern_agent.md  03.tavily_search_integration.md  04.react_agent.md  05.react_agent_user_input.md  06.web_extraction_tools.md  07.web_extraction_with_filesystem.md  08.react_agent_tool_registry.md  09.e2b_sandbox_integration.md
web/: README.md  package-lock.json  package.json
(+70 files in other folders)
